@@ -42,7 +42,7 @@ public:
 		delete_all();
 	}
 		
-	gboolean get_next_eit(Dvb::SI::SectionParser& parser, Dvb::SI::EventInformationSection& section, gboolean is_atsc, guint timeout);
+	gboolean get_next_eit(Dvb::SI::SectionParser& parser, Dvb::SI::EventInformationSection& section, gboolean is_atsc);
 	
 	Dvb::Demuxer* add()
 	{
@@ -63,7 +63,7 @@ public:
 	}
 };
 
-gboolean EITDemuxers::get_next_eit(Dvb::SI::SectionParser& parser, Dvb::SI::EventInformationSection& section, gboolean is_atsc, guint timeout)
+gboolean EITDemuxers::get_next_eit(Dvb::SI::SectionParser& parser, Dvb::SI::EventInformationSection& section, gboolean is_atsc)
 {
 	if (eit_demuxers == NULL)
 	{
@@ -84,14 +84,14 @@ gboolean EITDemuxers::get_next_eit(Dvb::SI::SectionParser& parser, Dvb::SI::Even
 		eit_demuxer = g_slist_next(eit_demuxer);
 	}
 
-	gint result = ::poll(fds, demuxer_count, timeout * 1000);
+	gint result = ::poll(fds, demuxer_count, 1000);
 	if (result >= 0)
 	{		
 		eit_demuxer = eit_demuxers;
 		while (eit_demuxer != NULL && selected_eit_demuxer == NULL)
 		{
 			Dvb::Demuxer* current = (Dvb::Demuxer*)eit_demuxer->data;
-			if (current->poll())
+			if (current->poll(100))
 			{
 				selected_eit_demuxer = current;
 			}
@@ -164,7 +164,7 @@ void EpgThread::run()
 		{
 			Dvb::SI::EventInformationSection section;
 			
-			gboolean got_event = demuxers.get_next_eit(parser, section, is_atsc, 1);
+			gboolean got_event = demuxers.get_next_eit(parser, section, is_atsc);
 
 			if (!got_event)
 			{
@@ -227,5 +227,5 @@ void EpgThread::run()
 
 	THREAD_CATCH;
 
-	g_debug(_("Exiting EPG thread"));
+	g_debug("Exiting EPG thread");
 }
